#  Copyright (c) 2022, Gonzalo Ferrer
# 
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[metadata]
name = mrob
home_page = https://github.com/prime-slam/mrob
author = Gonzalo Ferrer
author_email = G.Ferrer@skoltech.ru
url = https://github.com/prime-slam/mrob
download_url = https://github.com/prime-slam/mrob
description = Mobile Robotics library (mrob) is a framework for implementing robotics research and projects.
platforms = any
maintainer = Gonzalo Ferrer
maintainer_email = G.Ferrer@skoltech.ru
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0 
license_files = LICENSE.md

[options]
python_requires = >= 3.7

[options.package_data]
* = 
    *.so 
    *.dylib
    *.dll
    *.pyd
