IF(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}") #TODO: /Wall but disable noisy warnings
    ADD_COMPILE_DEFINITIONS(_USE_MATH_DEFINES)
    SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
ELSEIF(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -Werror=return-type")
ELSEIF(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -Wno-inconsistent-missing-override -Werror=return-type")
ELSE()
ENDIF(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")

FIND_PACKAGE(Eigen3 REQUIRED)
LINK_LIBRARIES(Eigen3::Eigen)

INCLUDE_DIRECTORIES(common)
ADD_SUBDIRECTORY(common)

INCLUDE_DIRECTORIES(geometry)
ADD_SUBDIRECTORY(geometry)

INCLUDE_DIRECTORIES(FGraph)
ADD_SUBDIRECTORY(FGraph)
INCLUDE_DIRECTORIES(inertial)
ADD_SUBDIRECTORY(inertial)
INCLUDE_DIRECTORIES(PCRegistration)
ADD_SUBDIRECTORY(PCRegistration)

INCLUDE_DIRECTORIES(plane-surfaces)
ADD_SUBDIRECTORY(plane-surfaces)

INCLUDE_DIRECTORIES(visual)
ADD_SUBDIRECTORY(visual)

# IF(NOT ANDROID)
#     ADD_SUBDIRECTORY(pybind)
# ENDIF(NOT ANDROID)
